--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,8 +1,13 @@
+* {
+    padding: 0;
+    margin: 0;
+}
+
 body {
-    background-color: #cccccc;
+    background-color: #bdbdbd;
     color: #ffffff;
     font-family: sans-serif;
-    padding: 12px;
+    padding: 24px;
 }
 
 a {
@@ -18,10 +23,11 @@ a:hover {
 .navbar {
     display: flex;
     list-style-type: none;
+    margin-bottom: 20px;
 }
 
 .navbar li a {
-    padding: 20px;
+    padding: 0 20px;
     display: inline-block;
 }
 
